--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,67 +1,180 @@
 * {
-	border:        none;
+	border: none;
 	border-radius: 0;
-	font-family:   Sans;
-	font-size:     15px;
-	box-shadow:    none;
-	text-shadow:   none;
-	transition-duration: 0s;
-
+	font-family: Cica, monospace;
+	font-size: 13px;
+	min-height: 0;
 }
 
-window {
-	color:      rgba(217, 216, 216, 1);
-	background: rgba(35, 31, 32, 0.00);
+window#waybar {
+	background: rgba(43, 48, 59, 0.5);
+	color: #ffffff;
 }
 
-window#waybar.solo {
-	color:      rgba(217, 216, 216, 1);
-	background: rgba(35, 31, 32, 0.85);
+window#waybar.hidden {
+	opacity: 0.2;
 }
 
-#workspaces {
-	margin: 0 5px;
+window#waybar.empty {
+	background: transparent;
 }
 
+window#waybar.termite {
+	background-color: #3F3F3F;
+}
+
+window#waybar.chromium {
+	background-color: #DEE1E6;
+	color: #000000;
+	border: none;
+}
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button {
-	padding:    0 5px;
-	color:      rgba(217, 216, 216, 0.4);
+	padding: 0 5px;
+	background: transparent;
+	color: #ffffff;
 }
 
-#workspaces button.visible {
-	color:      rgba(217, 216, 216, 1);
+window#waybar.chromium #workspaces button {
+	color: #3F3F3F;
 }
 
 #workspaces button.focused {
-	border-top: 3px solid rgba(217, 216, 216, 1);
-	border-bottom: 3px solid rgba(217, 216, 216, 0);
+	background: #64727D;
+}
+
+window#waybar.chromium #workspaces button.focused {
+	color: #ffffff;
 }
 
 #workspaces button.urgent {
-	color:      rgba(238, 46, 36, 1);
+	background-color: #eb4d4b;
 }
 
-#mode, #battery, #cpu, #memory, #network, #pulseaudio, #idle_inhibitor, #backlight, #custom-storage, #custom-spotify, #custom-weather, #custom-mail {
-	margin:     0px 6px 0px 10px;
-	min-width:  25px;
+#mode {
+	background: #64727D;
 }
 
-#battery.warning {
-	color:       rgba(255, 210, 4, 1);
+#clock, #battery, #cpu, #memory, #temperature, #backlight, #network, #pulseaudio, #custom-media, #tray, #mode, #idle_inhibitor {
+	padding: 0 10px;
+	margin: 0 5px;
+	color: #ffffff;
 }
 
-#battery.critical {
-	color:      rgba(238, 46, 36, 1);
+#clock {
+	background-color: #64727D;
+}
+
+#battery {
+	background-color: #ffffff;
+	color: #000000;
 }
 
 #battery.charging {
-	color:      rgba(217, 216, 216, 1);
+	color: #ffffff;
+	background-color: #26A65B;
 }
 
-#custom-storage.warning {
-	color:      rgba(255, 210, 4, 1);
+@keyframes blink {
+	to {
+		background-color: #ffffff;
+		color: #000000;
+	}
 }
 
-#custom-storage.critical {
-	color:      rgba(238, 46, 36, 1);
+#battery.critical:not(.charging) {
+	background: #f53c3c;
+	color: #ffffff;
+	animation-name: blink;
+	animation-duration: 0.5s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+}
+
+label:focus {
+	background-color: #000000;
+}
+
+#cpu {
+	background: #2ecc71;
+	color: #000000;
+}
+
+#memory {
+	background: #9b59b6;
+}
+
+#backlight {
+	background: #90b1b1;
+}
+
+#network {
+	background: #2980b9;
+}
+
+#network.disconnected {
+	background: #f53c3c;
+}
+
+#pulseaudio {
+	background: #f1c40f;
+	color: #000000;
+}
+
+#pulseaudio.muted {
+	background: #90b1b1;
+	color: #2a5c45;
+}
+
+#custom-media {
+	background: #66cc99;
+	color: #2a5c45;
+}
+
+.custom-spotify {
+	background: #66cc99;
+}
+
+.custom-vlc {
+	background: #ffa000;
+}
+
+#temperature {
+	background: #f0932b;
+}
+
+#temperature.critical {
+	background: #eb4d4b;
+}
+
+#tray {
+	background: transparent;
+}
+
+#idle_inhibitor {
+	background-color: #2d3436;
+}
+
+#idle_inhibitor.activated {
+	background-color: #ecf0f1;
+	color: #2d3436;
+}
+
+#mpd {
+	background: #66cc99;
+	color: #2a5c45;
+}
+
+#mpd.disconnected {
+	background: #f53c3c;
+}
+
+#mpd.stopped {
+	background: #90b1b1;
+}
+
+#mpd.paused {
+	background: #51a37a;
 }
