--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,8 +1,8 @@
 * {
 	border: none;
 	border-radius: 0;
-	font-family: Cica, monospace;
-	font-size: 13px;
+	font-family: monospace;
+	font-size: 15px;
 	min-height: 0;
 }
 
